# lager

./: .gitignore  LICENSE  Pipfile  README.md  README.rst  pyproject.toml  setup.cfg
lager/: __init__.py  enums.py  handlers.py  levels.py  loggers.py  verbosity.py
tests/: test_enums.py  test_file_handlers.py  test_handlers.py  test_levels.py  test_loggers.py  test_socket_handlers.py  test_stream_handlers.py  test_verbosity.py
tests/fixtures/: lorem-ipsum.txt
