[project]
name = "lager"
version = "2024.11.30"
description = "Stupid Simple Logging ðŸº"
authors = [{ name = "Vince Forgione", email = "vince.4gione@icloud.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pyright>=1.1.389",
    "pytest>=8.3.3",
    "ruff>=0.8.1",
]
